--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,10 +11,16 @@
 <body>
     <div class="container">
         <h1 class="text-center">Lista de Atividades</h1>
-        <h3 class="text-center">Acesso</h3>
+        <h3 class="text-center">Login</h3>
         <div class="row">
-            <div class="col-sm text-center"><a href="/login" class="btn btn-outline-info botao">login</a></div>
-            <div class="col-sm text-center"><a href="/registro" class="btn btn-outline-danger botao">Registro</a></div>
+            <div class="col text-center">
+                <form action="" method="post" class="form-control">
+                    <input type="email" name="email" id="" class="form-control" placeholder="Email">
+                    <input type="password" name="senha" id="" class="form-control" placeholder="Senha">
+                    <input type="submit" value="Entrar" class="btn btn-outline-info">
+                </form>
+                <a href="/registro" class="btn btn-outline-info botao">Registrar</a>
+            </div>
         </div>
     </div>
 </body>
