--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Atividades</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- bootstrap icons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -16,12 +18,22 @@
             <div class="col text-center">
                 <form action="" method="post" class="form-control">
                     <input type="email" name="email" id="" class="form-control" placeholder="Email">
-                    <input type="password" name="senha" id="" class="form-control" placeholder="Senha">
+                    <div class="input-group"><input type="password" name="senha" id="senha" class="form-control" placeholder="Senha"><i class="bi bi-eye-fill btn btn-outline-dark" id="troca"></i></div>
                     <input type="submit" value="Entrar" class="btn btn-outline-info">
                 </form>
-                <a href="/registro" class="btn btn-outline-info botao">Registrar</a>
+                <a href="/registro" class="btn btn-outline-info botao">Login</a>
             </div>
         </div>
     </div>
+    <script>
+        var trocaTipo = document.querySelector('#troca')
+        var senha = document.querySelector('#senha')
+
+        trocaTipo.addEventListener('click',()=>{
+            var tipo = senha.getAttribute("type") === "password" ? "text" : "password"
+            senha.setAttribute("type",tipo)
+            trocaTipo.classList.toggle("bi-eye-slash-fill")
+        })
+    </script>
 </body>
 </html>
