--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -17,11 +17,11 @@
                 <form action="" method="post" class="form-control">
                     <input type="text" name="nome" id="" class="form-control" placeholder="Nome">
                     <input type="email" name="email" id="" class="form-control" placeholder="Email">
-                    <input type="password" name="senha" id="" class="form-control" placeholder="Senha">
-                    <input type="password" name="senha2" id="" class="form-control" placeholder="Redigite a senha">
+                    <input type="password" name="senha" id="senha" class="form-control" placeholder="Senha">
+                    <input type="password" name="senha2" id="senha2" class="form-control" placeholder="Redigite a senha">
                     <input type="submit" value="Entrar" class="btn btn-outline-info">
                 </form>
-                <a href="/login" class="btn btn-outline-info botao">Login</a>
+                <a href="/login" class="btn btn-outline-info botao">Registrar</a>
                 
             </div>
         </div>
