--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
                     <div class="input-group"><input type="password" name="senha" id="senha" class="form-control" placeholder="Senha"><i class="bi bi-eye-fill btn btn-outline-dark" id="troca"></i></div>
                     <input type="submit" value="Entrar" class="btn btn-outline-info">
                 </form>
-                <a href="/registro" class="btn btn-outline-info botao">Login</a>
+                <a href="/registro" class="btn btn-outline-info botao">Registro</a>
             </div>
         </div>
     </div>
