--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -19,12 +19,13 @@
                     <input type="email" name="email" id="" class="form-control" placeholder="Email">
                     <input type="password" name="senha" id="senha" class="form-control" placeholder="Senha">
                     <input type="password" name="senha2" id="senha2" class="form-control" placeholder="Redigite a senha">
-                    <input type="submit" value="Entrar" class="btn btn-outline-info">
+                    <input type="submit" value="Registro" class="btn btn-outline-info">
                 </form>
-                <a href="/login" class="btn btn-outline-info botao">Registrar</a>
+                <a href="/login" class="btn btn-outline-info botao">Login</a>
                 
             </div>
         </div>
     </div>
+    <script src="js/comparar.js"></script>
 </body>
 </html>
