--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -11,26 +11,35 @@
 <body>
     <div class="container">
         <h1 class="text-center">Lista de Atividades</h1>
+        <h3 class="text-center">Usuário:<%=nome%></h3>
         <div class="row">
             <div class="col-sm text-center">
                 <h3 class="text-center">Cadastrar</h3>
                 <form action="" method="post" class="form-control">
-                    <input type="date" name="data" id="" class="form-control" placeholder="Data">
-                    <select name="tipo" id="" class="form-control">
+
+                <div class="form-floating">
+                    <input type="date" name="data" id="floatingInput" class="form-control" placeholder="Data">
+                    <label for="floatingInput">Data de entrega</label>
+                </div>
+
+                <div class="form-floating">
+                    <select name="tipo" id="floatingSelect" class="form-control">
                         <option value="0">Selecione...</option>
                         <option value="1">AC</option>
                         <option value="2">AT</option>
                         <option value="3">REC</option>
                         <option value="4">Exame</option>
                     </select>
+                    <label for="floatingSelect">Tipo de Atividade:</label>
+                </div>
+                <div class="row">
+                    <div class="col">
                     <input type="radio" name="entrega" class="form-check-input" id="" value="tarefa">Tarefa no Teams
                     <input type="radio" name="entrega" class="form-check-input" id="" value="chat">Chat no Teams
                     <input type="radio" name="entrega" class="form-check-input" id="" value="email">Email
                     <input type="radio" name="entrega" class="form-check-input" id="" value="formulario">Forms
-
-                    <input type="email" name="email" id="" class="form-control" placeholder="Email">
-                    <input type="password" name="senha" id="" class="form-control" placeholder="Senha">
-                    <input type="password" name="senha2" id="" class="form-control" placeholder="Redigite a senha">
+                    </div>
+                </div>
                     <input type="submit" value="Entrar" class="btn btn-outline-info">
                 </form>
                 <a href="/login" class="btn btn-outline-info botao">Login</a>
