--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -15,7 +15,9 @@
         <div class="row">
             <div class="col-sm text-center">
                 <h3 class="text-center">Cadastrar</h3>
-                <form action="" method="post" class="form-control">
+                <form action="/atividades" method="post" class="form-control">
+                    <input type="hidden" name="id" value="<%=id%>">
+                    <input type="hidden" name="nome" value="<%=nome%>">
 
                 <div class="form-floating">
                     <input type="date" name="data" id="floatingInput" class="form-control" placeholder="Data">
@@ -32,19 +34,39 @@
                     </select>
                     <label for="floatingSelect">Tipo de Atividade:</label>
                 </div>
-                <div class="row">
-                    <div class="col">
+                <label for="" class="form-control">Como Entregar:</label>
+
                     <input type="radio" name="entrega" class="form-check-input" id="" value="tarefa">Tarefa no Teams
                     <input type="radio" name="entrega" class="form-check-input" id="" value="chat">Chat no Teams
                     <input type="radio" name="entrega" class="form-check-input" id="" value="email">Email
                     <input type="radio" name="entrega" class="form-check-input" id="" value="formulario">Forms
+
+                <label for="" class="form-control">Orientações</label>
+                <textarea name="orientacao" id="" cols="30" rows="10"
+                class="form-control"></textarea>
+
+                    <input type="submit" value="Gravar" class="btn btn-outline-danger">
+                </form>
+                </div>
+                <div class="col-sm text-center">
+                    <h3>Atividades Cadastradas:</h3>
+                    <div class="card">
+                        <div class="card-header bg-dark text-light">Data:</div>
+                        <div class="card-body">
+                            <div class="card-title">Tipo:</div>
+                            <div class="card-subtitle">entrega:</div>
+                            <div class="card-text">Orientações:</div>
+                        </div>
+                        <div class="card-footer">
+                            <div class="input-group">
+                                <input type="button" value="Entregue" class="btn btn-outline-success form-control" >
+                                <input type="button" value="Alterar" class="btn btn-outline-warning form-control" >
+                                <input type="button" value="Excluir" class="btn btn-outline-danger form-control" >
+                            </div>
+                        </div>
                     </div>
                 </div>
-                    <input type="submit" value="Entrar" class="btn btn-outline-info">
-                </form>
-                <a href="/login" class="btn btn-outline-info botao">Login</a>
 
-            </div>
         </div>
     </div>
 </body>
