--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body>
+<body class="sd">
     <div class="container">
         <h1 class="text-center">Lista de Atividades</h1>
         <h3 class="text-center">Usuário:<%=nome%></h3>
@@ -50,12 +50,13 @@
                 </div>
                 <div class="col-sm text-center">
                     <h3>Atividades Cadastradas:</h3>
+                    <% for (var n=0; n<dados.length;n++){%>
                     <div class="card">
-                        <div class="card-header bg-dark text-light">Data:</div>
+                        <div class="card-header bg-dark text-light">Data:<%=dados[n].data%></div>
                         <div class="card-body">
-                            <div class="card-title">Tipo:</div>
-                            <div class="card-subtitle">entrega:</div>
-                            <div class="card-text">Orientações:</div>
+                            <div class="card-title">Tipo:<%=dados[n].tipo%></div>
+                            <div class="card-subtitle">entrega:<%=dados[n].entrega%></div>
+                            <div class="card-text">Orientações:<%=dados[n].instrucoes%></div>
                         </div>
                         <div class="card-footer">
                             <div class="input-group">
@@ -65,8 +66,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-
+                    <% }%>
+            </div>
         </div>
     </div>
 </body>
