--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -27,10 +27,10 @@
                 <div class="form-floating">
                     <select name="tipo" id="floatingSelect" class="form-control">
                         <option value="0">Selecione...</option>
-                        <option value="1">AC</option>
-                        <option value="2">AT</option>
-                        <option value="3">REC</option>
-                        <option value="4">Exame</option>
+                        <option value="AC">AC</option>
+                        <option value="At2">AT</option>
+                        <option value="3REc3">REC</option>
+                        <option value="4Exm">Exame</option>
                     </select>
                     <label for="floatingSelect">Tipo de Atividade:</label>
                 </div>
@@ -40,6 +40,18 @@
                     <input type="radio" name="entrega" class="form-check-input" id="" value="chat">Chat no Teams
                     <input type="radio" name="entrega" class="form-check-input" id="" value="email">Email
                     <input type="radio" name="entrega" class="form-check-input" id="" value="formulario">Forms
+
+                    <div class="form-floating">
+                        <select name="materia" id="floatingSelect" class="form-control">
+                            <option value="0">Selecione...</option>
+                            <option value="Ing">Inglês</option>
+                            <option value="Bd2">Banco de Dados</option>
+                            <option value="Lp2">Linguagem de Programação</option>
+                            <option value="Inw">Internet (WebDesign)</option>
+                            <option value="Mat">Mátematica</option>
+                        </select>
+                        <label for="floatingSelect">Máteria:</label>
+                    </div>
 
                 <label for="" class="form-control">Orientações</label>
                 <textarea name="orientacao" id="" cols="30" rows="10"
@@ -52,9 +64,12 @@
                     <h3>Atividades Cadastradas:</h3>
                     <% for (var n=0; n<dados.length;n++){%>
                     <div class="card">
-                        <div class="card-header bg-dark text-light">Data:<%=dados[n].data%></div>
+                        <div class="card-header bg-dark text-light">
+                            Data:<%=dados[n].data.getDay()+2%>° dia da semana - <%=dados[n].data.getDate()+1%>/<%=dados[n].data.getMonth()+1%>/<%=dados[n].data.getFullYear()%>
+                        </div>
                         <div class="card-body">
                             <div class="card-title">Tipo:<%=dados[n].tipo%></div>
+                            <div class="card-title">Materia:<%=dados[n].materia%></div>
                             <div class="card-subtitle">entrega:<%=dados[n].entrega%></div>
                             <div class="card-text">Orientações:<%=dados[n].instrucoes%></div>
                         </div>
@@ -62,7 +77,7 @@
                             <div class="input-group">
                                 <input type="button" value="Entregue" class="btn btn-outline-success form-control" >
                                 <input type="button" value="Alterar" class="btn btn-outline-warning form-control" >
-                                <input type="button" value="Excluir" class="btn btn-outline-danger form-control" >
+                                <input type="button" value="Excluir" class="btn btn-outline-danger form-control" onclick="(window.location.href='/excluir?id=<%=dados[n]._id%>')">
                             </div>
                         </div>
                     </div>
