--- a/views/accordion.ejs
+++ b/views/accordion.ejs
@@ -4,66 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Atividades</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/estilos.css">
+    <title>Accordion</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
-<body class="sd">
-    <div class="container">
-        <h1 class="text-center">Lista de Atividades</h1>
-        <h3 class="text-center">Usuário:<%=nome%></h3>
-        <div class="row">
-            <div class="col-sm text-center order-2">
-                <h3 class="text-center">Cadastrar</h3>
-                <form action="/atividades" method="post" class="form-control">
-                    <input type="hidden" name="id" value="<%=id%>">
-                    <input type="hidden" name="nome" value="<%=nome%>">
-
-                <div class="form-floating">
-                    <input type="date" name="data" id="floatingInput" class="form-control" placeholder="Data">
-                    <label for="floatingInput">Data de entrega</label>
-                </div>
-
-                <div class="form-floating">
-                    <select name="tipo" id="floatingSelect" class="form-control">
-                        <option value="0">Selecione...</option>
-                        <option value="AC">AC</option>
-                        <option value="At2">AT</option>
-                        <option value="3REc3">REC</option>
-                        <option value="4Exm">Exame</option>
-                    </select>
-                    <label for="floatingSelect">Tipo de Atividade:</label>
-                </div>
-                <label for="" class="form-control">Como Entregar:</label>
-
-                    <input type="radio" name="entrega" class="form-check-input" id="" value="tarefa">Tarefa no Teams
-                    <input type="radio" name="entrega" class="form-check-input" id="" value="chat">Chat no Teams
-                    <input type="radio" name="entrega" class="form-check-input" id="" value="email">Email
-                    <input type="radio" name="entrega" class="form-check-input" id="" value="formulario">Forms
-
-                    <div class="form-floating">
-                        <select name="materia" id="floatingSelect" class="form-control">
-                            <option value="0">Selecione...</option>
-                            <option value="Ing">Inglês</option>
-                            <option value="Bd2">Banco de Dados</option>
-                            <option value="Lp2">Linguagem de Programação</option>
-                            <option value="Inw">Internet (WebDesign)</option>
-                            <option value="Mat">Mátematica</option>
-                        </select>
-                        <label for="floatingSelect">Máteria:</label>
-                    </div>
-
-                <label for="" class="form-control">Orientações</label>
-                <textarea name="orientacao" id="" cols="30" rows="10"
-                class="form-control"></textarea>
-
-                    <input type="submit" value="Gravar" class="btn btn-outline-danger">
-                </form>
-                </div>
-                <div class="col-sm text-center order-1">
-                    <h3>Atividades Cadastradas:</h3>
-                    <h4>Em aberto:</h4>
-                    <% for (var n=0; n<dados.length;n++){%>
+<body>
+    <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+              Em abertos #1
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+            <div class="accordion-body">
+                <% for (var n=0; n<dados.length;n++){%>
                     <div class="card">
                         <div class="card-header bg-dark text-light">
                             Data:<%=dados[n].data.getDay()+2%>° dia da semana - <%=dados[n].data.getDate()+1%>/<%=dados[n].data.getMonth()+1%>/<%=dados[n].data.getFullYear()%>
@@ -84,9 +39,18 @@
                         </div>
                     </div>
                     <% }%>
-
-                    <h4>Entregues:</h4>
-                    <% for (var n=0; n<dadose.length;n++){%>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+              Entregues #2
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+            <div class="accordion-body">
+                <% for (var n=0; n<dadose.length;n++){%>
                     <div class="card">
                         <div class="card-header bg-dark text-light">
                             Data:<%=dadose[n].data.getDay()+2%>° dia da semana - <%=dadose[n].data.getDate()+1%>/<%=dadose[n].data.getMonth()+1%>/<%=dadose[n].data.getFullYear()%>
@@ -107,9 +71,18 @@
                         </div>
                     </div>
                     <% }%>
-
-                    <h4>Excluidos:</h4>
-                    <% for (var n=0; n<dadosx.length;n++){%>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+              Excluidos #3
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+            <div class="accordion-body">
+                <% for (var n=0; n<dadosx.length;n++){%>
                     <div class="card">
                         <div class="card-header bg-dark text-light">
                             Data:<%=dadosx[n].data.getDay()+2%>° dia da semana - <%=dadosx[n].data.getDate()+1%>/<%=dadosx[n].data.getMonth()+1%>/<%=dadosx[n].data.getFullYear()%>
@@ -131,7 +104,10 @@
                     </div>
                     <% }%>
             </div>
+          </div>
         </div>
     </div>
 </body>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </html>
