--- a/views/atividades2.ejs
+++ b/views/atividades2.ejs
@@ -10,6 +10,7 @@
 </head>
 <body class="sd">
     <div class="container">
+        <a href="/login" class="btn btn-outline-danger logoff">Logoff</a>
         <h1 class="text-center">Lista de Atividades</h1>
         <h3 class="text-center">Usuário:<%=nome%></h3>
         <div class="row">
@@ -66,7 +67,7 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                          Em abertos #1
+                          Em abertos (<%=dados.length%>)
                         </button>
                       </h2>
                       <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
@@ -98,7 +99,7 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                          Entregues #2
+                          Entregues (<%=dadose.length%>)
                         </button>
                       </h2>
                       <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
@@ -116,7 +117,6 @@
                                     </div>
                                     <div class="card-footer">
                                         <div class="input-group">
-                                            <input type="button" value="Alterar" class="btn btn-outline-warning form-control" >
                                             <input type="button" value="Excluir" class="btn btn-outline-danger form-control" onclick="(window.location.href='/excluir?id=<%=dadose[n]._id%>')">
                                             <input type="button" value="Desfazer" class="btn btn-outline-primary form-control" onclick="(window.location.href='/desfazer?id=<%=dadose[n]._id%>')">
                                             <input type="button" value="Aniquilar" class="btn btn-outline-dark form-control" onclick="(window.location.href='/aniquilar?id=<%=dadose[n]._id%>')">
@@ -130,7 +130,7 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                          Excluidos #3
+                          Excluidos (<%=dadosx.length%>)
                         </button>
                       </h2>
                       <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
@@ -148,8 +148,6 @@
                                     </div>
                                     <div class="card-footer">
                                         <div class="input-group">
-                                            <input type="button" value="Entregue" class="btn btn-outline-success form-control" onclick="(window.location.href='/entregue?id=<%=dadosx[n]._id%>')">
-                                            <input type="button" value="Alterar" class="btn btn-outline-warning form-control" >
                                             <input type="button" value="Desfazer" class="btn btn-outline-primary form-control" onclick="(window.location.href='/desfazer?id=<%=dadosx[n]._id%>')">
                                             <input type="button" value="Aniquilar" class="btn btn-outline-dark form-control" onclick="(window.location.href='/aniquilar?id=<%=dadosx[n]._id%>')">
                                         </div>
