--- a/views/atividades2.ejs
+++ b/views/atividades2.ejs
@@ -49,7 +49,7 @@
                             <option value="Bd2">Banco de Dados</option>
                             <option value="Lp2">Linguagem de Programação</option>
                             <option value="Inw">Internet (WebDesign)</option>
-                            <option value="Mat">Mátematica</option>
+                            <option value="Mat">Mátematican</option>
                             <option value="Pot">Portugues</option>
                             <option value="HeG">Historia e Geografia</option>
                             <option value="Pt">Produção de Texto</option>
