--- a/views/atividades2.ejs
+++ b/views/atividades2.ejs
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Atividades</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body class="sd">
     <div class="container">
-        <a href="/login" class="btn btn-outline-danger logoff">Logoff</a>
+        <a href="/login" class="btn btn-outline-danger logoff"><i class="bi bi-power"></i></a>
         <h1 class="text-center">Lista de Atividades</h1>
         <h3 class="text-center">Usuário:<%=nome%></h3>
         <div class="row">
@@ -49,7 +50,7 @@
                             <option value="Bd2">Banco de Dados</option>
                             <option value="Lp2">Linguagem de Programação</option>
                             <option value="Inw">Internet (WebDesign)</option>
-                            <option value="Mat">Mátematican</option>
+                            <option value="Mat">Mátematica</option>
                             <option value="Pot">Portugues</option>
                             <option value="HeG">Historia e Geografia</option>
                             <option value="Pt">Produção de Texto</option>
@@ -98,7 +99,7 @@
                                     <div class="card-footer">
                                         <div class="input-group">
                                             <input type="button" value="Entregue" class="btn btn-outline-success form-control" onclick="(window.location.href='/entregue?id=<%=dados[n]._id%>')">
-                                            <input type="button" value="Alterar" class="btn btn-outline-warning form-control" >
+                                            <input type="button" value="Alterar" class="btn btn-outline-warning form-control" onclick="(window.location.href='/Alterar?id=<%=dados[n]._id%>')">
                                             <input type="button" value="Excluir" class="btn btn-outline-danger form-control" onclick="(window.location.href='/excluir?id=<%=dados[n]._id%>')">
                                             <input type="button" value="Aniquilar" class="btn btn-outline-dark form-control" onclick="(window.location.href='/aniquilar?id=<%=dados[n]._id%>')">
                                         </div>
