--- a/views/alterar.ejs
+++ b/views/alterar.ejs
@@ -20,6 +20,7 @@
                 <form action="/alterar" method="post" class="form-control">
                     <input type="hidden" name="id" value="<%=id%>">
                     <input type="hidden" name="nome" value="<%=nome%>">
+                    <input type="hidden" name="id_a" value="<%=dados._id%>">
 
                 <div class="form-floating">
                     <input type="date" name="data" id="floatingInput" class="form-control" placeholder="Data" value="<%=dados.data.toISOString().slice(0,10) %>" required>
@@ -68,7 +69,8 @@
 
                     <label for="" class="form-control">Orientações</label>
                     <textarea name="orientacao" id="" cols="30" rows="10" class="form-control"><%=dados.instrucoes%></textarea>
-
+                    
+                    <input type="button" value="cancelar" class="btn btn-outline-info" onclick="history.back()">
                     <input type="submit" value="Alterar" class="btn btn-outline-danger">
                 </form>
             </div>
