--- a/views/alterar.ejs
+++ b/views/alterar.ejs
@@ -60,8 +60,8 @@
                             <option value="Soc" <%=dados.materia=="Soc"?"selected":""%>>Sociologia</option>
                             <option value="Art" <%=dados.materia=="Art"?"selected":""%>>Arte</option>
                             <option value="Ans" <%=dados.materia=="Ans"?"selected":""%>>Analise de Sistemas</option>
-                            <option value="CGf" <%=dados.materia=="CGF"?"selected":""%>>Computação Grafica</option>
-                            <option value="RCS" <%=dados.materia=="RCs"?"selected":""%>>Rede de Computador e Segurança</option>
+                            <option value="CGf" <%=dados.materia=="CGf"?"selected":""%>>Computação Grafica</option>
+                            <option value="RCS" <%=dados.materia=="RCS"?"selected":""%>>Rede de Computador e Segurança</option>
                             <option value="EdF" <%=dados.materia=="EdF"?"selected":""%>>Ed. Fisica</option>
                         </select>
                         <label for="floatingSelect">Máteria:</label>
