--- a/views/atividades2.ejs
+++ b/views/atividades2.ejs
@@ -88,7 +88,7 @@
                             <% for (var n=0; n<dados.length;n++){%>
                                 <div class="card">
                                     <div class="card-header bg-dark text-light">
-                                        Data:<%=dados[n].data.getDay()%>° dia da semana - <%=dados[n].data.getDate()%>/<%=dados[n].data.getMonth()+1%>/<%=dados[n].data.getFullYear()%>
+                                        Data:<%=dados[n].data.getDay()+1%>° dia da semana - <%=dados[n].data.getDate()%>/<%=dados[n].data.getMonth()+1%>/<%=dados[n].data.getFullYear()%>
                                     </div>
                                     <div class="card-body">
                                         <div class="card-title">Tipo:<%=dados[n].tipo%></div>
@@ -120,7 +120,7 @@
                             <% for (var n=0; n<dadose.length;n++){%>
                                 <div class="card">
                                     <div class="card-header bg-dark text-light">
-                                        Data:<%=dadose[n].data.getDay()%>° dia da semana - <%=dadose[n].data.getDate()%>/<%=dadose[n].data.getMonth()+1%>/<%=dadose[n].data.getFullYear()%>
+                                        Data:<%=dadose[n].data.getDay()+1%>° dia da semana - <%=dadose[n].data.getDate()%>/<%=dadose[n].data.getMonth()+1%>/<%=dadose[n].data.getFullYear()%>
                                     </div>
                                     <div class="card-body">
                                         <div class="card-title">Tipo:<%=dadose[n].tipo%></div>
@@ -151,7 +151,7 @@
                             <% for (var n=0; n<dadosx.length;n++){%>
                                 <div class="card">
                                     <div class="card-header bg-dark text-light">
-                                        Data:<%=dadosx[n].data.getDay()%>° dia da semana - <%=dadosx[n].data.getDate()%>/<%=dadosx[n].data.getMonth()+1%>/<%=dadosx[n].data.getFullYear()%>
+                                        Data:<%=dadosx[n].data.getDay()+1%>° dia da semana - <%=dadosx[n].data.getDate()%>/<%=dadosx[n].data.getMonth()+1%>/<%=dadosx[n].data.getFullYear()%>
                                     </div>
                                     <div class="card-body">
                                         <div class="card-title">Tipo:<%=dadosx[n].tipo%></div>
